Adding support for ADV2 files. Work in progress.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -658,6 +658,7 @@
       <DependentUpon>frmGenerateStarFieldVideoModel.cs</DependentUpon>
     </Compile>
     <Compile Include="VideoTools\VideoModelUtils.cs" />
+    <Compile Include="Video\AstroDigitalVideoStreamV2.cs" />
     <Compile Include="Video\AstroDigitalVideo\AdvToAviConverter.cs" />
     <Compile Include="Video\AstroDigitalVideo\frmBuildingNtpTimebase.cs">
       <SubType>Form</SubType>
