--- a/Tangra.Model/Tangra.Model.csproj
+++ b/Tangra.Model/Tangra.Model.csproj
@@ -203,6 +203,7 @@
     <Compile Include="VideoOperations\VideoOperationBase.cs" />
     <Compile Include="Video\FramePlayerTypes.cs" />
     <Compile Include="Video\IFramePlayer.cs" />
+    <Compile Include="Video\VideoFileFormat.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Astro\frmPSFViewer.resx">
