Fixed a problem where the very first measurement of the first frame is not used and this can create a bias for fast movers when only 1 or 2 frames per integration period are measured.

--- a/Tangra.Astrometry/Tangra.Astrometry.csproj
+++ b/Tangra.Astrometry/Tangra.Astrometry.csproj
@@ -249,7 +249,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Tests\MotionFitting\TestCasesData\TestCase1.xml" />
+    <EmbeddedResource Include="Tests\MotionFitting\TestCasesData\TestCase1.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
