--- a/Tangra.Astrometry.Tests/Tangra.Astrometry.Tests.csproj
+++ b/Tangra.Astrometry.Tests/Tangra.Astrometry.Tests.csproj
@@ -29,9 +29,31 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\Tangra.Astrometry\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,7 +61,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MotionFitting\TestFlyByMotionFitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StarCatalogues\TestPPMXL.cs" />
+    <Compile Include="StarCatalogues\TestUCAC3.cs" />
+    <Compile Include="TestPsfFit.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MotionFitting\TestCasesData\TestCase1.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tangra.Astrometry\Tangra.Astrometry.csproj">
+      <Project>{dd1aea51-7b2f-483e-b2d2-a892762a405c}</Project>
+      <Name>Tangra.Astrometry</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tangra.Model\Tangra.Model.csproj">
+      <Project>{70bbc9a7-7dd9-4a4d-b972-6665c65875c6}</Project>
+      <Name>Tangra.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
