Work to make it possible to build automated plate-solving tests to be used for regression testing.

--- a/Tangra.Astrometry/Tangra.Astrometry.csproj
+++ b/Tangra.Astrometry/Tangra.Astrometry.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Astrometry\Analysis\PeakPixelResolver.cs" />
     <Compile Include="Astrometry\Analysis\PlateObjectResolver.cs" />
     <Compile Include="Astrometry\DirectTransRotAstrometry.cs" />
+    <Compile Include="Astrometry\ExportModels.cs" />
     <Compile Include="Astrometry\FocalLengthFit.cs" />
     <Compile Include="Astrometry\IAstrometricFit.cs" />
     <Compile Include="Astrometry\LeastSquareFittedAstrometry.cs" />
