--- a/Tangra.Astrometry.Tests/Tangra.Astrometry.Tests.csproj
+++ b/Tangra.Astrometry.Tests/Tangra.Astrometry.Tests.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MotionFitting\TestFlyByMotionFitter.cs" />
+    <Compile Include="PlateSolve\PlateSolveTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StarCatalogues\TestPPMXL.cs" />
     <Compile Include="StarCatalogues\TestUCAC3.cs" />
