--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -926,6 +926,12 @@
     <Compile Include="Video\FITS\frmSortFitsFiles.Designer.cs">
       <DependentUpon>frmSortFitsFiles.cs</DependentUpon>
     </Compile>
+    <Compile Include="Video\frmAviLoadOptions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Video\frmAviLoadOptions.Designer.cs">
+      <DependentUpon>frmAviLoadOptions.cs</DependentUpon>
+    </Compile>
     <Compile Include="Video\frmIntegrationDetection.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -933,6 +939,7 @@
       <DependentUpon>frmIntegrationDetection.cs</DependentUpon>
     </Compile>
     <Compile Include="Video\FITS\IFITSStream.cs" />
+    <Compile Include="Video\ReInterlacingVideoStream.cs" />
     <Compile Include="Video\RotatedVideoStream.cs" />
     <Compile Include="Video\SER\frmCheckTimeStampsIntegrity.cs">
       <SubType>Form</SubType>
@@ -1291,6 +1298,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Video\FITS\frmSortFitsFiles.resx">
       <DependentUpon>frmSortFitsFiles.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Video\frmAviLoadOptions.resx">
+      <DependentUpon>frmAviLoadOptions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Video\frmIntegrationDetection.resx">
       <DependentUpon>frmIntegrationDetection.cs</DependentUpon>
