Added controls to configure hot pixel correction. First managed version of the hot pixel identification algorithm.

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -667,6 +667,7 @@
     <Compile Include="VideoTools\frmGenerateStarFieldVideoModel.Designer.cs">
       <DependentUpon>frmGenerateStarFieldVideoModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="VideoTools\HotPixelCorrector.cs" />
     <Compile Include="VideoTools\ucImageDefectSettings.cs">
       <SubType>UserControl</SubType>
     </Compile>
