Implemented hot pixel removal, currently available in the Astrometry module.

--- a/Tangra.Core/TangraCore_Win32.project
+++ b/Tangra.Core/TangraCore_Win32.project
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <CodeLite_Project Name="TangraCore_Win32" InternalType="Library">
   <Plugins>
+    <Plugin Name="qmake">
+      <![CDATA[00020001N0005Debug0000000000000001N0007Release000000000000]]>
+    </Plugin>
     <Plugin Name="CMakePlugin">
       <![CDATA[[{
   "name": "Debug",
@@ -21,9 +24,6 @@
   "arguments": [],
   "parentProject": ""
  }]]]>
-    </Plugin>
-    <Plugin Name="qmake">
-      <![CDATA[00020001N0005Debug0000000000000001N0007Release000000000000]]>
     </Plugin>
   </Plugins>
   <Description/>
@@ -56,6 +56,7 @@
     <File Name="adv2_image_section.cpp"/>
     <File Name="adv2_status_section.cpp"/>
     <File Name="adv_profiling.cpp"/>
+    <File Name="HotPixelRemover.cpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="include">
     <File Name="adv_file.h"/>
@@ -90,6 +91,7 @@
     <File Name="adv2_status_section.h"/>
     <File Name="stdafx.h"/>
     <File Name="adv_profiling.h"/>
+    <File Name="HotPixelRemover.h"/>
   </VirtualDirectory>
   <Settings Type="Dynamic Library">
     <GlobalSettings>
