--- a/Tangra.Astrometry/Tangra.Astrometry.csproj
+++ b/Tangra.Astrometry/Tangra.Astrometry.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Astrometry\Recognition\Logging\AstrometricFitDebugger.cs" />
     <Compile Include="Astrometry\Recognition\PyramidStarsDensityDistributor.cs" />
     <Compile Include="Astrometry\Recognition\ulonglong.cs" />
+    <Compile Include="Astrometry\ThreeStarAstrometry.cs" />
     <Compile Include="MotionFitting\FlyByMotionFitter.cs" />
     <Compile Include="StarCatalogues\PPMXL\PPMXLCatalogue.cs" />
     <Compile Include="StarCatalogues\PPMXL\PPMXLEntry.cs" />
