--- a/Tangra.Addins/Tangra.Addins.csproj
+++ b/Tangra.Addins/Tangra.Addins.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AstrometryExportAddin.cs" />
     <Compile Include="frmConfigureAddin.cs">
       <SubType>Form</SubType>
     </Compile>
