--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -348,6 +348,12 @@
     <Compile Include="VideoOperations\Astrometry\Tracking\IAstrometryTracker.cs" />
     <Compile Include="VideoOperations\Astrometry\Tracking\SlowMotionTracker.cs" />
     <Compile Include="VideoOperations\ConvertVideoToAav\ConvertVideoToAavOperation.cs" />
+    <Compile Include="VideoTools\frmCorrectInterlacedDefects.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoTools\frmCorrectInterlacedDefects.Designer.cs">
+      <DependentUpon>frmCorrectInterlacedDefects.cs</DependentUpon>
+    </Compile>
     <Compile Include="VideoOperations\ConvertVideoToAav\ucConvertVideoToAav.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -1123,6 +1129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\Astrometry\ucChooseCalibratedConfiguration.resx">
       <DependentUpon>ucChooseCalibratedConfiguration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoTools\frmCorrectInterlacedDefects.resx">
+      <DependentUpon>frmCorrectInterlacedDefects.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\ConvertVideoToAav\ucConvertVideoToAav.resx">
       <DependentUpon>ucConvertVideoToAav.cs</DependentUpon>
