Extended the LinearRegression to calculate the uncertainty in A and B. Added unit tests. WIP: Trying to improve the weighting to produce meaningful StdDev in the weighted linear regression case.

--- a/Tangra.Astrometry.Tests/Tangra.Astrometry.Tests.csproj
+++ b/Tangra.Astrometry.Tests/Tangra.Astrometry.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Calibration\TestStar.cs" />
     <Compile Include="Calibration\TestThreeStarFit.cs" />
     <Compile Include="MotionFitting\TestFlyByMotionFitter.cs" />
+    <Compile Include="MotionFitting\TestLinearRegression.cs" />
     <Compile Include="PlateSolve\PlateSolveTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StarCatalogues\TestPPMXL.cs" />
