--- a/Tangra.Astrometry.Tests/Tangra.Astrometry.Tests.csproj
+++ b/Tangra.Astrometry.Tests/Tangra.Astrometry.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Calibration\TestThreeStarFit.cs" />
     <Compile Include="MotionFitting\TestFlyByMotionFitter.cs" />
     <Compile Include="MotionFitting\TestLinearRegression.cs" />
+    <Compile Include="MotionFitting\TestTDistribution.cs" />
     <Compile Include="PlateSolve\PlateSolveTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StarCatalogues\TestPPMXL.cs" />
