--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -125,6 +125,7 @@
       <DependentUpon>frmConfirmIntegrationRate.cs</DependentUpon>
     </Compile>
     <Compile Include="Addins\MarshalByRefAstrometryProvider.cs" />
+    <Compile Include="Addins\MarshalByRefFileInfoProvider.cs" />
     <Compile Include="Addins\MarshalByRefLightCurveDataProvider.cs" />
     <Compile Include="Addins\SettingsStorageProvider.cs" />
     <Compile Include="Addins\SingleMeasurement.cs" />
