--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -93,6 +93,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\DirectShowLib-2005.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
@@ -363,6 +364,15 @@
       <DependentUpon>frmIdentifiedStarAction.cs</DependentUpon>
     </Compile>
     <Compile Include="ImageTools\RoiSelector.cs" />
+    <Compile Include="VideoOperations\Astrometry\MotionFitting\frmAstrometryMotionFitting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoOperations\Astrometry\MotionFitting\frmAstrometryMotionFitting.Designer.cs">
+      <DependentUpon>frmAstrometryMotionFitting.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VideoOperations\Astrometry\MotionFitting\IMeasurementPositionProvider.cs" />
+    <Compile Include="VideoOperations\Astrometry\MotionFitting\MeasurementPositionCSVProvider.cs" />
+    <Compile Include="VideoOperations\Astrometry\MotionFitting\MeasurementPositionEntry.cs" />
     <Compile Include="VideoOperations\Astrometry\Tracking\FastMotionTracker.cs" />
     <Compile Include="VideoOperations\Astrometry\Tracking\IAstrometryTracker.cs" />
     <Compile Include="VideoOperations\Astrometry\Tracking\SlowMotionTracker.cs" />
@@ -1139,6 +1149,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\Astrometry\frmSolveConfiguration.resx">
       <DependentUpon>frmSolveConfiguration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoOperations\Astrometry\MotionFitting\frmAstrometryMotionFitting.resx">
+      <DependentUpon>frmAstrometryMotionFitting.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\Astrometry\MPCReport\frmChooseMPCObject.resx">
       <DependentUpon>frmChooseMPCObject.cs</DependentUpon>
