Reverted the RA fitting to be pure RA, rather than RA.Cos(DE) as the latter has issues with the uncertainty estimations and based on the unit tests the linear fit is better in RA terms directly.

--- a/Tangra.Astrometry.Tests/Tangra.Astrometry.Tests.csproj
+++ b/Tangra.Astrometry.Tests/Tangra.Astrometry.Tests.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Calibration\TestStar.cs" />
     <Compile Include="Calibration\TestThreeStarFit.cs" />
+    <Compile Include="MotionFitting\TestFastMotionFitter.cs" />
     <Compile Include="MotionFitting\TestFlyByMotionFitter.cs" />
     <Compile Include="MotionFitting\TestLinearRegression.cs" />
     <Compile Include="MotionFitting\TestTDistribution.cs" />
