--- a/OcrTester/OcrTester.csproj
+++ b/OcrTester/OcrTester.csproj
@@ -72,6 +72,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -84,11 +87,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UnitTests\TestSubPixelImage.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmNewDev.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNewDev.Designer.cs">
+      <DependentUpon>frmNewDev.cs</DependentUpon>
     </Compile>
     <Compile Include="frmRunTestCases.cs">
       <SubType>Form</SubType>
@@ -105,6 +115,9 @@
     <Compile Include="TestCaseHelper.cs" />
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNewDev.resx">
+      <DependentUpon>frmNewDev.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmRunTestCases.resx">
       <DependentUpon>frmRunTestCases.cs</DependentUpon>
