--- a/Tangra.OCR/Tangra.OCR.csproj
+++ b/Tangra.OCR/Tangra.OCR.csproj
@@ -78,6 +78,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GpsBoxSpriteOcr.cs" />
+    <Compile Include="GpsBoxSprite\GpsBoxSpriteLineOcr.cs" />
+    <Compile Include="GpsBoxSprite\GpsBoxSpriteOcrProcessor.cs" />
     <Compile Include="IotaVtiOcrCorrector.cs" />
     <Compile Include="IotaVtiOrcManaged.cs" />
     <Compile Include="IotaVtiOsdProcessor\IotaVtiOcrCalibratedState.cs" />
@@ -87,6 +90,7 @@
     <Compile Include="ITimestampOcr.cs" />
     <Compile Include="KiwiOsdOcr.cs" />
     <Compile Include="LargeChunkDenoiser.cs" />
+    <Compile Include="Model\SubPixelImage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TangraCore.cs" />
   </ItemGroup>
@@ -96,6 +100,7 @@
       <Name>Tangra.Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
