--- a/Tangra.OCR/Tangra.OCR.csproj
+++ b/Tangra.OCR/Tangra.OCR.csproj
@@ -81,18 +81,19 @@
     <Compile Include="GpsBoxSpriteOcr.cs" />
     <Compile Include="GpsBoxSprite\GpsBoxSpriteLineOcr.cs" />
     <Compile Include="GpsBoxSprite\GpsBoxSpriteOcrProcessor.cs" />
+    <Compile Include="GpsBoxSprite\GpxBoxSpriteVtiTimeStamp.cs" />
     <Compile Include="TimeExtraction\OcrTimeStampCorrector.cs" />
     <Compile Include="IotaVtiOrcManaged.cs" />
     <Compile Include="IotaVtiOsdProcessor\IotaVtiOcrCalibratedState.cs" />
     <Compile Include="IotaVtiOsdProcessor\IotaVtiOcrCalibratingState.cs" />
     <Compile Include="IotaVtiOsdProcessor\IotaVtiOcrProcessor.cs" />
     <Compile Include="IotaVtiOsdProcessor\IotaVtiOcrState.cs" />
-    <Compile Include="ITimestampOcr.cs" />
+    <Compile Include="Model\ITimestampOcr.cs" />
     <Compile Include="KiwiOsdOcr.cs" />
-    <Compile Include="LargeChunkDenoiser.cs" />
+    <Compile Include="Model\LargeChunkDenoiser.cs" />
     <Compile Include="Model\SubPixelImage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TangraCore.cs" />
+    <Compile Include="Model\TangraCore.cs" />
     <Compile Include="TimeExtraction\IVtiTimeStamp.cs" />
     <Compile Include="TimeExtraction\VtiTimeStampComposer.cs" />
   </ItemGroup>
