Added ability to remove contaminated area from the video as part of the pre-processing

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -716,6 +716,7 @@
       <DependentUpon>frmGenerateStarFieldVideoModel.cs</DependentUpon>
     </Compile>
     <Compile Include="VideoTools\HotPixelCorrector.cs" />
+    <Compile Include="VideoTools\MaskAreaSelector.cs" />
     <Compile Include="VideoTools\ucImageDefectSettings.cs">
       <SubType>UserControl</SubType>
     </Compile>
