FITS Improvements Work in Progress: Saving Dynamic Range in LC, Loading FITS files when loading LC, Support for Start-End exposure timestamps

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -982,6 +982,7 @@
     <Compile Include="Video\FITS\frmSortFitsFiles.Designer.cs">
       <DependentUpon>frmSortFitsFiles.cs</DependentUpon>
     </Compile>
+    <Compile Include="Video\FITS\IFITSTimeStampReader.cs" />
     <Compile Include="Video\frmIntegrationDetection.cs">
       <SubType>Form</SubType>
     </Compile>
